fix: bad contrast for quote tags

--- a/core/assets/css/hljs/night-owl.css
+++ b/core/assets/css/hljs/night-owl.css
@@ -169,7 +169,7 @@ code.hljs {
 }
 
 .hljs-quote {
-    color: #697098;
+    color: #c8d0ff;
     font-style: italic
 }
 
